apps/sdkss-service/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdkss-service
spec:
  selector:
    app: sdkss-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
