apps/sdkss-service/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdkss-ingress
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
spec:
  ingressClassName: traefik-external
  rules:
    - host: placeholder-host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sdkss-service
                port:
                  number: 3000
  tls:
    - hosts:
        - placeholder-host
      secretName: sdkss-tls
